# grabe_mapping

./: loopclose.pts
logs/catkin_tools_prebuild/: build.cmake.000.log.stderr
src/demo_data/: CMakeLists.txt  package.xml
src/demo_data/launch/: demo_data.launch  rosbag_test.launch
src/demo_data/src/: pose_publisher.cpp  scan_publisher.cpp  tf_broadcaster.cpp  tf_test_broadcaster.cpp
src/grabe_mapping/: CMakeLists.txt  CMakeLists_plugin.txt  CMakeLists_scan_to_file.txt  old__CMakeLists.txt  package.xml  plugin.xml
src/grabe_mapping/include/exceptions/: bad_file_exception.h
src/grabe_mapping/include/io/: io.h
src/grabe_mapping/include/mapping/: mapping.h  mapping_algorithm.h  mapping_manager.h  parameter.h  parameter_map.h  rosbag_reader.h  slam6d.h
src/grabe_mapping/include/my_slam6d/: my_slam6d.h
src/grabe_mapping/include/rqt_plugin/: gui_plugin.h  parameter_widget.h  scan_to_file_widget.h
src/grabe_mapping/include/scan_to_file/: scan_to_file.h
src/grabe_mapping/include/slam6d/slam6d/: basicScan.h  graph.h  managedScan.h  metaScan.h  scan.h
src/grabe_mapping/scripts/: grabe_mapping
src/grabe_mapping/slam6d-code/: 3dtk-build-deps_1.0_all.deb  CMakeLists.txt
src/grabe_mapping/slam6d-code/dat/eupH/: .~lock.scan001.3d#
src/grabe_mapping/slam6d-code/dat/example/: scan001.frames
src/grabe_mapping/slam6d-code/dat/hannover1/: scan001.frames  scan002.frames  scan003.frames  scan007.frames  scan011.frames  scan012.frames  scan013.frames  scan014.frames  scan015.frames  scan017.frames  scan022.frames  scan024.frames  scan025.frames  scan026.frames  scan027.frames  scan028.frames  scan029.frames  scan033.frames  scan034.frames  scan038.frames  scan039.frames  scan041.frames  scan042.frames  scan044.frames  scan045.frames  scan047.frames  scan049.frames  scan050.frames  scan051.frames  scan052.frames  scan054.frames  scan055.frames  scan056.frames  scan058.frames  scan059.frames  scan061.frames  scan062.frames  scan063.frames  scan064.frames  scan065.frames
src/grabe_mapping/slam6d-code/doc/high_level_doc/: documentation.aux  documentation.blg  documentation.dvi  documentation.tex
src/grabe_mapping/slam6d-code/include/scanio/: helper.h  scan_io_pcd.h
src/grabe_mapping/src/io/: io.cpp
src/grabe_mapping/src/mapping/: mapping.cpp  mapping_manager.cpp  rosbag_reader.cpp
src/grabe_mapping/src/my_slam6d/: my_slam6d.cpp
src/grabe_mapping/src/rqt_plugin/: gui_plugin.cpp  gui_plugin.ui  gui_plugin.ui.autosave  parameter_widget.cpp  parameter_widget.ui  scan_to_file_widget.cpp  scan_to_file_widget.ui
src/grabe_mapping/src/scan_to_file/: scan_to_file.cpp  scan_to_file_node.cpp
src/grabe_mapping/src/slam6d/pmd/: CMakeLists.txt
src/grabe_mapping/src/slam6d/slam6d/: basicScan.cc  graph.cc  icp6D.cc  managedScan.cc  slam6D.cc
src/grabe_mapping_test/: CMakeLists.txt  package.xml  plugin.xml
src/grabe_mapping_test/include/exceptions/: bad_point_exception.h
src/grabe_mapping_test/include/mapping/: parameter.h  parameter_map.h
src/grabe_mapping_test/include/rqt_plugin/: gui_plugin.h
src/grabe_mapping_test/include/scan_to_file/: scan_to_file.h
src/grabe_mapping_test/launch/: grabe_mapping_master.launch  scan_to_file.launch
src/grabe_mapping_test/scripts/: scan_to_file_launch.sh
src/grabe_mapping_test/src/mapping/: mapping.cpp
src/grabe_mapping_test/src/rqt_plugin/: gui_plugin.cpp  gui_plugin.ui  gui_plugin.ui.autosave.GDRlVt
src/grabe_mapping_test/src/slam6d/mesh/: CMakeLists.txt
src/grabe_mapping_test/src/slam6d/qtshow/: CMakeLists.txt
src/grabe_mapping_test/src/slam6d/scanio/: helper.cc
src/pc_accumulation/: CMakeLists.txt  package.xml
src/pc_accumulation/launch/: autonomes_fahrzeug.launch  swap_pc_accumulation.launch  swap_test_with_old_bags.launch
src/pc_accumulation/src/: laser_assembler2_client.cpp  laser_assembler_client.cpp  pointcloud_converter.cpp  pointcloud_to_file.cpp  velodyne_frame_publisher.cpp  xyz2pcd.cpp
src/slam6d-code/: CMakeLists.txt  package.xml
src/slam6d-code/.svn/: wc.db
src/slam6d-code/dat/: loopclose.pts
src/slam6d-code/dat/example/: scan002.frames
src/slam6d-code/dat/hannover1/: scan004.frames  scan005.frames  scan006.frames  scan008.frames  scan009.frames  scan010.frames  scan016.frames  scan018.frames  scan019.frames  scan020.frames  scan021.frames  scan023.frames  scan030.frames  scan031.frames  scan032.frames  scan035.frames  scan036.frames  scan037.frames  scan040.frames  scan043.frames  scan046.frames  scan048.frames  scan053.frames  scan057.frames  scan060.frames
src/slam6d-code/doc/high_level_doc/: documentation.ps
src/slam6d-code/src/scanio/: scan_io_pcd.cc
src/slam6d-code/src/slam6d/: CMakeLists.txt
